--- a/MoreRealistic/Changelog.txt
+++ b/MoreRealistic/Changelog.txt
@@ -319,3 +319,6 @@ fix bug : air consumption when going at more than 7.2kph in reverse ("manual dir
 
 20251023    - add converted Claas Arion 500 tractor
             - first release of MR CVT
+
+20251024    - working on Claas Arion 500 (add 550 and 570 engines)
+            - apply a 0.85 factor to final yield when Precision Farming is present (to avoid getting extraordinary yields in game)
