--- a/MoreRealistic/Changelog.txt
+++ b/MoreRealistic/Changelog.txt
@@ -334,3 +334,4 @@ fix bug : air consumption when going at more than 7.2kph in reverse ("manual dir
             - add converted New Holland LWB PLMI (tractor)
             - trailers attacher joint tweaking
             - auto gear shifting takes into account "virtual target speed" and "engine load" to allow upshifting at partial throttle => more than 70% throttle input means the operator want to shift up if possible. Less than 25% throttle input means the operator wants to downshift if possible.
+            - new way of overriding DLC vehicles => we keep a "perfect copy" file of the DLC vehicle xml (faster to update it with a new version if needed)
