--- a/MoreRealistic/Changelog.txt
+++ b/MoreRealistic/Changelog.txt
@@ -330,8 +330,11 @@ fix bug : air consumption when going at more than 7.2kph in reverse ("manual dir
             - add converted Amazone zg ts 10001 (spreader)
             - add converted Streumaster fw 212 td profi (spreader)
 
-202511XX    - add converted Mack Superliner (truck)
+20251122    - add converted Mack Superliner (truck)
             - add converted New Holland LWB PLMI (tractor)
             - trailers attacher joint tweaking
             - auto gear shifting takes into account "virtual target speed" and "engine load" to allow upshifting at partial throttle => more than 70% throttle input means the operator want to shift up if possible. Less than 25% throttle input means the operator wants to downshift if possible.
             - new way of overriding DLC vehicles => we keep a "perfect copy" file of the DLC vehicle xml (faster to update it with a new version if needed)
+            - add converted Holmer terraDos T5.40 sugarbeet harvester
+            - fix bug with default MR CVT = sometimes (mostly in reverse), even when fully accelerating, we couldn't reach the top reverse speed. (engine rpm was still)
+            - updated versatile/ford tractors from prairie DLC to take into account the modified i3d file from Giants
