--- a/MoreRealistic/Changelog.txt
+++ b/MoreRealistic/Changelog.txt
@@ -339,7 +339,7 @@ fix bug : air consumption when going at more than 7.2kph in reverse ("manual dir
             - fix bug with default MR CVT = sometimes (mostly in reverse), even when fully accelerating, we couldn't reach the top reverse speed. (engine rpm was still)
             - updated versatile/ford tractors from prairie DLC to take into account the modified i3d file from Giants
 
-202512XX    - fix MR bug : in some situation, reversing light was remaining ON when exiting the vehicle
+20251209    - fix MR bug : in some situation, reversing light was remaining ON when exiting the vehicle
             - add converted Case Puma (tractor)
             - add converted Steyr Absolut (tractor)
             - add converted Lemken Titan 18 (plough)
